@@ -1,6 +1,6 @@
 Package: spatstat.linnet
-Version: 3.3-2.004
-Date: 2025-11-12
+Version: 3.3-2.005
+Date: 2025-11-16
 Title: Linear Networks Functionality of the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
