@@ -208,6 +208,8 @@ export("lpp")
 export("lppm")
 export("lppm.formula")
 export("lppm.lpp")
+export("lurking.lpp")               
+export("lurking.lppm")               
 export("makeLinnetTolerance")
 export("marks.linnet")
 export("marks<-.linnet")
@@ -452,6 +454,7 @@ S3method("is.stationary", "lppm")
   S3method("[", "lpp")
 S3method("lppm", "formula")
 S3method("lppm", "lpp")
+S3method("lurking", "lppm")
 S3method("marks", "linnet")
 S3method("marks", "lintess")
   S3method("mean", "linim")
