@@ -41,4 +41,4 @@ date version nhelpfiles nobjects ndatasets Rlines srclines
 "2025-07-24" "3.3-0" 150 328 0 13326 3270
 "2025-07-24" "3.3-1" 150 328 0 13326 3270
 "2025-09-24" "3.3-2" 150 328 0 13356 3270
-"2025-11-12" "3.3-2.004" 150 328 0 13384 3270
+"2025-11-16" "3.3-2.005" 151 330 0 13408 3270
